--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://133.186.151.141:3306/nhn_academy_32?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=nhn_academy_32
+spring.datasource.password=EJdrW!(bf]HjT9a5
+
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
