init data from external file txt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=nhn_academy_32
 spring.datasource.password=EJdrW!(bf]HjT9a5
 
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+init.file.name=./src/main/resources/department.txt
