--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>department</name>
     <description>department</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -65,6 +66,12 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
@@ -82,6 +89,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>department</finalName>
     </build>
 
 </project>
