--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.datasource.url=jdbc:mysql://133.186.151.141:3306/nhn_academy_32?serverTim
 spring.datasource.username=nhn_academy_32
 spring.datasource.password=EJdrW!(bf]HjT9a5
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-init.file.name=./src/main/resources/department.txt
+#init.file.name=./src/main/resources/department.txt
